# disk-scanner

./: Cargo.toml  Makefile.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/: cli.rs  display.rs  main.rs  node.rs  scanner.rs
tests/: integration_test.rs
